Bug 373918 - Mispelled folders after "Import File Listing"
Summary: Mispelled folders after "Import File Listing"
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-12-19 22:16 UTC by Martin Schnitkemper
Modified: 2016-12-20 22:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Schnitkemper 2016-12-19 22:16:15 UTC
After upgrading from version 2.3.11 to 3.0 the name of folders are truncating by the first two digits using the "Import File Listing".  The root of a volume is now representing by a single dot (".") instead of an empty entry as before.
Comment 1 Robby Stephenson 2016-12-20 01:53:18 UTC
Git commit 70c7697d3d764429786e6a6cd4469d402b209dca by Robby Stephenson.
Committed on 20/12/2016 at 01:50.
Pushed by rstephenson into branch 'master'.

Do not remove first two characters from relative file listings

Using QUrl instead of KUrl had a behavior change with relative folder
paths. Restore the old Tellico behavior when importing a file listing of
using an empty string for the root folder instead of "." and avoid
truncating the first two characters in the path
FIXED-IN: 3.0.1

M  +4    -0    ChangeLog
M  +2    -2    src/translators/filelistingimporter.cpp

https://commits.kde.org/tellico/70c7697d3d764429786e6a6cd4469d402b209dca
Comment 2 Martin Schnitkemper 2016-12-20 22:04:41 UTC
Hi Robby,

thanks for your fast response.  After applying the patch and rebuild the package, the import works for me, all folders are displayed again correct now.