Do not remove first two characters from relative file listings

Using QUrl instead of KUrl had a behavior change with relative folder
paths. Restore the old Tellico behavior when importing a file listing of
using an empty string for the root folder instead of "." and avoid
truncating the first two characters in the path

BUG: 373918
FIXED-IN: 3.0.1